--- a/vignettes/multipletests.Rmd
+++ b/vignettes/multipletests.Rmd
@@ -46,7 +46,7 @@ meaningful things together.
 combine_tests(
   one_t_inference(wt ~ am|vs, data = mtcars2),
   two_t_inference(wt ~ am, data = mtcars2),
-  correlation_test(mpg ~ wt + hp, data=mtcars2),
+  correlation_inference(mpg ~ wt + hp, data=mtcars2),
   one_proportion_inference(vs ~ am|cyl, data=mtcars2)) |>
   as_gt() |> tab_compact()
 ```
