--- a/inst/template.qmd
+++ b/inst/template.qmd
@@ -18,15 +18,16 @@ format:
 library(conflicted)
 library(tidyverse)
 library(patchwork)
-library(gt)
 library(umncvmstats)
 conflicts_prefer(dplyr::filter, dplyr::lag, dplyr::select, umncvmstats::as_gt)
 ```
 
 ## Part 1
 
-```{r}
+Please comment on all your R code.
 
+```{r}
+1+1
 ```
 
 ## About
@@ -34,3 +35,5 @@ conflicts_prefer(dplyr::filter, dplyr::lag, dplyr::select, umncvmstats::as_gt)
 All computations done using `r R.version.string`. Cite as follows:
 
 -   `r format(citation(), style="text")`
+
+`r knitr::current_input() |> xfun::with_ext("qmd") |> xfun::embed_file()`
