add here to the template

--- a/inst/template.qmd
+++ b/inst/template.qmd
@@ -16,6 +16,7 @@ format:
 ```{r}
 #| message: FALSE
 library(conflicted)
+library(here)
 library(tidyverse)
 library(patchwork)
 library(umncvmstats)
